# morpho-plate

./: .gitignore  README.md  main_.py  morphological_pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: watchlist.example.txt
morphoplate/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  watchlist.py
morphoplate/alpr/: __init__.py  engine.py
morphoplate/morphology/: __init__.py  pipeline.py
morphoplate/viz/: __init__.py  overlays.py
tests/: test_config.py  test_morphology.py  test_watchlist.py
